// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldNumber is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="warning"
  inputid="1"
  isinvalid="false"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-invalid="false"
      aria-label="aria-label"
      class="euiFieldNumber testClass1 testClass2 euiFieldNumber--withIcon"
      data-test-subj="test subject string"
      id="1"
      max="8"
      min="1"
      name="elastic"
      step="1"
      type="number"
      value="1"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props controlOnly is rendered 1`] = `
<eui-validatable-control>
  <input
    aria-invalid="false"
    class="euiFieldNumber"
    type="number"
    value=""
  />
</eui-validatable-control>
`;

exports[`EuiFieldNumber props fullWidth is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="true"
  isinvalid="false"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-invalid="false"
      class="euiFieldNumber euiFieldNumber--fullWidth"
      type="number"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props isInvalid is rendered from a prop 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isinvalid="true"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <input
      aria-invalid="true"
      class="euiFieldNumber euiFormControlLayout--1icons"
      type="number"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props isLoading is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isinvalid="false"
  isloading="true"
>
  <eui-validatable-control>
    <input
      aria-invalid="false"
      class="euiFieldNumber euiFormControlLayout--1icons euiFieldNumber-isLoading"
      type="number"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props readOnly is rendered 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isinvalid="false"
  isloading="false"
  readonly="true"
>
  <eui-validatable-control>
    <input
      aria-invalid="false"
      class="euiFieldNumber"
      readonly=""
      type="number"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props value no initial value 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isinvalid="false"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-invalid="false"
      class="euiFieldNumber"
      type="number"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldNumber props value value is number 1`] = `
<eui-form-control-layout
  compressed="false"
  fullwidth="false"
  isinvalid="false"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-invalid="false"
      class="euiFieldNumber"
      type="number"
      value="0"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;
